# NeuroSeek

./: AUGMENTATION_RIGHTS_CHARTER.md  CyberneticHostSecurityComplete.md  IMPLEMENTATION_SUMMARY.md  INTEGRATION_CHECKLIST.md  NEUROSEEK_BIOLOAD_SPEC.md  NeuroSeekSecuritySummary.md  Neuromodulation-Addiction-Removal-Therapies-for-Nicotine-and-Cigarettes.md  README.md  RUST_CRATE_DESIGN.md  build.gradle.kts  deepseek_json_20260216_00ec32.json  deepseek_json_20260216_2c8688.json  deepseek_rust_20260216_cab3d2.rs  deepseek_rust_20260217_3834c5.rs  deepseek_rust_20260217_677cb9.rs  deepseek_rust_20260217_6d4d70.rs  deepseek_rust_20260217_af4619.rs  deepseek_rust_20260217_b03347.rs  deepseek_rust_20260217_d5c396.rs  deepseek_rust_20260217_db495a.rs  deepseek_rust_20260217_ea0f60.rs  deepseek_rust_20260217_ea97fb.rs  deepseek_rust_20260217_ec050e.rs  llm-config.md
crates/neuroseek/: Cargo.toml
crates/neuroseek/src/: biophysics.rs  clustering.rs  compiler.rs  governance.rs  lib.rs  model.rs  neurorights.rs
crates/neuroseek/src/ingest/: episode_metrics.rs  mod.rs  prometheus.rs
crates/neuroseek/src/stimulus/: audio.rs  mod.rs
crates/neuroseek_audio/: Cargo.toml
crates/neuroseek_audio/src/: audio_nanopolytope.rs  config.rs  generator.rs  governance.rs  lib.rs  transfer.rs
docs/02-2026/: neuromorphic-ml-integrating-into-Android-and-Gradle-builds-with-Kotlin.md
neuroseek-android-sdk/: build.gradle.kts
sovereign-anomaly-guard/: Cargo.toml
sovereign-anomaly-guard/src/: lib.rs  main.rs  providers.rs  roh.rs  sovereignty.rs
src/: config.rs  generator.rs
(+24 files in other folders)
