[package]
name = "sovereign-anomaly-guard"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
csv = "1.3"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
thiserror = "1.0"
anyhow = "1.0"
sha2 = "0.10"
hex = "0.4"

[features]
default = []
