[package]
name = "neuroseek"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.0", features = ["v4", "serde"] }
tokio = { version = "1.0", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.3"
clap = { version = "4.0", features = ["derive"] }
chrono = "0.4"
anyhow = "1.0"
reqwest = { version = "0.11", features = ["json"] }
urlencoding = "2.0"
nalgebra = "0.32"
thiserror = "1.0"
prometheus = { version = "0.13", optional = true } # if we use it in governance
lazy_static = "1.4"

# Path dependency to our new audio crate
neuroseek_audio = { path = "../neuroseek_audio" }
