[package]
name = "neuroseek_audio"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
hound = "3.5"
anyhow = "1.0"
nalgebra = "0.32"   # for linear algebra (polytope constraints)
rand = "0.8"         # for random sampling
thiserror = "1.0"    # for error types
